# DRF

./: db.sqlite3  pyproject.toml
clone/: models.py  serializers.py  urls.py  views.py
clone/migrations/: 0001_initial.py  0002_login_register.py
twitterclone/: asgi.py  settings.py  urls.py  wsgi.py
